feat: Added frontend, borrowings feat